chore(security): sanitize repository data and fixtures